Made pointer const

--- a/brendancuda_fixedvectors.cuh.tt
+++ b/brendancuda_fixedvectors.cuh.tt
@@ -18,7 +18,7 @@ namespace BrendanCUDA {
         };
         __host__ __device__ inline constexpr <#= t #>_<#= j #>();
         __host__ __device__ inline constexpr <#= t #>_<#= j #>(<#= tn #> x, <#= tn #> y<# if (j > 2) { #>, <#= tn #> z<# if (j > 3) { #>, <#= tn #> w<# } } #>);
-        __host__ __device__ inline constexpr <#= t #>_<#= j #>(<#= tn #> v[<#= j #>]);
+        __host__ __device__ inline constexpr <#= t #>_<#= j #>(const <#= tn #> v[<#= j #>]);
         __host__ __device__ inline constexpr <#= t #>_<#= j #> operator+(<#= t #>_<#= j #> other);
         __host__ __device__ inline constexpr <#= t #>_<#= j #> operator-(<#= t #>_<#= j #> other);
         __host__ __device__ inline constexpr <#= t #>_<#= j #> operator*(<#= tn #> other);
@@ -36,8 +36,8 @@ namespace BrendanCUDA {
 <# string tn = i >= 2 ? t + "_t" : t; #>
 <# for (int j = 2; j <= 4; ++j) { #>
 __host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #>::<#= t #>_<#= j #>() : x(0), y(0)<# if (j > 2) { #>, z(0)<# if (j > 3) { #>, w(0)<# } } #> { }
-__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #>::<#= t #>_<#= j #>(<#= tn #> x, <#= tn #> y<# if (j > 2) { #>, <#= tn #> z<# if (j > 3) { #>, <#= tn #> w<# } } #>) : x(x), y(y)<# if (j > 2) { #>, z(z)<# if (j > 3) { #>, w(w)<# } } #> { }
-__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #>::<#= t #>_<#= j #>(<#= tn #> v[<#= j #>]) : v{ <# for (int k = 0; k < j; ++k) { #><# if (k > 0) { #>, <# } #>v[<#= k #>]<# } #> } { }
+__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #>::<#= t #>_<#= j #>(const <#= tn #> x, const <#= tn #> y<# if (j > 2) { #>, const <#= tn #> z<# if (j > 3) { #>, const <#= tn #> w<# } } #>) : x(x), y(y)<# if (j > 2) { #>, z(z)<# if (j > 3) { #>, w(w)<# } } #> { }
+__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #>::<#= t #>_<#= j #>(const <#= tn #> v[<#= j #>]) : v{ <# for (int k = 0; k < j; ++k) { #><# if (k > 0) { #>, <# } #>v[<#= k #>]<# } #> } { }
 __host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator+(<#= t #>_<#= j #> other) {
     return <#= t #>_<#= j #>(x + other.x, y + other.y<# if (j > 2) { #>, z + other.z<# if (j > 3) { #>, w + other.w<# } } #>);
 }
