--- a/brendancuda_fixedvectors.cuh.tt
+++ b/brendancuda_fixedvectors.cuh.tt
@@ -19,10 +19,10 @@ namespace BrendanCUDA {
         __host__ __device__ inline constexpr <#= t #>_<#= j #>();
         __host__ __device__ inline constexpr <#= t #>_<#= j #>(<#= tn #> x, <#= tn #> y<# if (j > 2) { #>, <#= tn #> z<# if (j > 3) { #>, <#= tn #> w<# } } #>);
         __host__ __device__ inline constexpr <#= t #>_<#= j #>(const <#= tn #> v[<#= j #>]);
-        __host__ __device__ inline constexpr <#= t #>_<#= j #> operator+(<#= t #>_<#= j #> other);
-        __host__ __device__ inline constexpr <#= t #>_<#= j #> operator-(<#= t #>_<#= j #> other);
-        __host__ __device__ inline constexpr <#= t #>_<#= j #> operator*(<#= tn #> other);
-        __host__ __device__ inline constexpr <#= t #>_<#= j #> operator/(<#= tn #> other);
+        __host__ __device__ inline constexpr <#= t #>_<#= j #> operator+(<#= t #>_<#= j #> other) const;
+        __host__ __device__ inline constexpr <#= t #>_<#= j #> operator-(<#= t #>_<#= j #> other) const;
+        __host__ __device__ inline constexpr <#= t #>_<#= j #> operator*(<#= tn #> other) const;
+        __host__ __device__ inline constexpr <#= t #>_<#= j #> operator/(<#= tn #> other) const;
         __host__ __device__ static inline constexpr <#= tn #> Dot(<#= t #>_<#= j #> left, <#= t #>_<#= j #> right);
         __host__ __device__ inline constexpr <#= tn #> MagnatudeSquared() const;
         __host__ __device__ inline <#= tn #> Magnatude() const;
@@ -38,16 +38,16 @@ namespace BrendanCUDA {
 __host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #>::<#= t #>_<#= j #>() : x(0), y(0)<# if (j > 2) { #>, z(0)<# if (j > 3) { #>, w(0)<# } } #> { }
 __host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #>::<#= t #>_<#= j #>(const <#= tn #> x, const <#= tn #> y<# if (j > 2) { #>, const <#= tn #> z<# if (j > 3) { #>, const <#= tn #> w<# } } #>) : x(x), y(y)<# if (j > 2) { #>, z(z)<# if (j > 3) { #>, w(w)<# } } #> { }
 __host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #>::<#= t #>_<#= j #>(const <#= tn #> v[<#= j #>]) : v{ <# for (int k = 0; k < j; ++k) { #><# if (k > 0) { #>, <# } #>v[<#= k #>]<# } #> } { }
-__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator+(<#= t #>_<#= j #> other) {
+__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator+(<#= t #>_<#= j #> other) const {
     return <#= t #>_<#= j #>(x + other.x, y + other.y<# if (j > 2) { #>, z + other.z<# if (j > 3) { #>, w + other.w<# } } #>);
 }
-__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator-(<#= t #>_<#= j #> other) {
+__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator-(<#= t #>_<#= j #> other) const {
     return <#= t #>_<#= j #>(x - other.x, y - other.y<# if (j > 2) { #>, z - other.z<# if (j > 3) { #>, w - other.w<# } } #>);
 }
-__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator*(<#= tn #> other) {
+__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator*(<#= tn #> other) const {
     return <#= t #>_<#= j #>(x * other, y * other<# if (j > 2) { #>, z * other<# if (j > 3) { #>, w * other<# } } #>);
 }
-__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator/(<#= tn #> other) {
+__host__ __device__ inline constexpr BrendanCUDA::<#= t #>_<#= j #> BrendanCUDA::<#= t #>_<#= j #>::operator/(<#= tn #> other) const {
     return <#= t #>_<#= j #>(x / other, y / other<# if (j > 2) { #>, z / other<# if (j > 3) { #>, w / other<# } } #>);
 }
 __host__ __device__ inline constexpr <#= tn #> BrendanCUDA::<#= t #>_<#= j #>::Dot(<#= t #>_<#= j #> left, <#= t #>_<#= j #> right) {
