--- a/brendancuda_points.cu.tt
+++ b/brendancuda_points.cu.tt
@@ -1,8 +1,8 @@
 <# int[] bitCounts = {32, 64}; #>
-#include "brendancuda_points.cuh"
+#include "brendancuda_points.h"
 #include <cuda_runtime.h>
 #include <cstdint>
-#include "brendancuda_fixedvectors.cuh"
+#include "brendancuda_fixedvectors.h"
 
 using BrendanCUDA::uint32_2;
 using BrendanCUDA::uint32_3;
